feat: additional data collected for pools, tokens and fees

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Define constants for Arbitrum:\n",
@@ -54,15 +54,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T15:35:12.493501Z",
-     "start_time": "2023-08-14T15:35:12.488906Z"
+     "end_time": "2023-08-15T13:25:02.283870Z",
+     "start_time": "2023-08-15T13:25:02.267171Z"
     }
    },
    "id": "39d87004addaae1b"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -80,6 +80,11 @@
     "      address\n",
     "      id\n",
     "      symbol\n",
+    "      totalProtocolFeePaidInBPT\n",
+    "      tokens {{\n",
+    "        symbol\n",
+    "        paidProtocolFees\n",
+    "      }}\n",
     "    }}\n",
     "    timestamp\n",
     "    protocolFee\n",
@@ -93,8 +98,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T15:35:12.502963Z",
-     "start_time": "2023-08-14T15:35:12.492108Z"
+     "end_time": "2023-08-15T13:25:02.292751Z",
+     "start_time": "2023-08-15T13:25:02.273542Z"
     }
    },
    "id": "abc722b4fa453b5a"
@@ -111,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import os\n",
@@ -183,8 +188,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T15:35:41.473518Z",
-     "start_time": "2023-08-14T15:35:12.499431Z"
+     "end_time": "2023-08-15T13:26:59.202347Z",
+     "start_time": "2023-08-15T13:25:02.284574Z"
     }
    },
    "id": "e1e0b8b90f62234c"
@@ -201,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             pool_fee      swap_fee           time_from  \\\nwstETH-rETH-sfrxETH-BPT  26878.230379   5296.981956 2023-07-31 23:57:32   \nB-rETH-STABLE            26019.234558  15720.118922 2023-07-31 23:57:32   \n50STG-50bbaUSD           16308.632655  22025.781467 2023-07-31 23:57:32   \nwstETH-bb-a-WETH-BPT     14191.985981   3584.245398 2023-07-31 23:57:32   \n50rETH-50BADGER          12623.634016   2620.446127 2023-07-31 23:57:32   \nswETH-bb-a-WETH-BPT       6343.584184     40.883159 2023-07-31 23:57:32   \nankrETH/wstETH            6199.462552   1299.693253 2023-07-31 23:57:32   \nB-staFiETH-WETH-Stable    3135.484927   1312.466431 2023-07-31 23:57:32   \nGHO/bb-a-USD              3117.088776   4450.192065 2023-07-31 23:57:32   \n50rETH-50RPL              2860.233035   3993.251328 2023-07-31 23:57:32   \n50wstETH-50ACX            2068.686617   1843.788977 2023-07-31 23:57:32   \n20WETH-80ALCX             1978.718360   3475.158464 2023-07-31 23:57:32   \n50wstETH-50LDO            1199.377443    177.147674 2023-07-31 23:57:32   \nwbETH-wstETH               348.404449      0.203894 2023-07-31 23:57:32   \ncbETH-bb-a-WETH-BPT          0.045390      0.000019 2023-07-31 23:57:32   \nRDNT-WETH                11329.786288  18710.162660 2023-07-31 23:57:32   \nB-wstETH-WETH-Stable      4811.523704     63.926965 2023-07-31 23:57:32   \nbb-a-USD                  3166.295830    864.700164 2023-07-31 23:57:32   \nrETH-bb-a-WETH-BPT        1082.792500    317.284404 2023-07-31 23:57:32   \nbbaUSDC/bbaUSDCe           170.757962    204.723590 2023-07-31 23:57:32   \nwstETH/rETH/cbETH           82.043660     67.858882 2023-07-31 23:57:32   \n\n                                    time_to     chain  \nwstETH-rETH-sfrxETH-BPT 2023-08-14 18:30:55   mainnet  \nB-rETH-STABLE           2023-08-14 18:30:55   mainnet  \n50STG-50bbaUSD          2023-08-14 18:30:55   mainnet  \nwstETH-bb-a-WETH-BPT    2023-08-14 18:30:55   mainnet  \n50rETH-50BADGER         2023-08-14 18:30:55   mainnet  \nswETH-bb-a-WETH-BPT     2023-08-14 18:30:55   mainnet  \nankrETH/wstETH          2023-08-14 18:30:55   mainnet  \nB-staFiETH-WETH-Stable  2023-08-14 18:30:55   mainnet  \nGHO/bb-a-USD            2023-08-14 18:30:55   mainnet  \n50rETH-50RPL            2023-08-14 18:30:55   mainnet  \n50wstETH-50ACX          2023-08-14 18:30:55   mainnet  \n20WETH-80ALCX           2023-08-14 18:30:55   mainnet  \n50wstETH-50LDO          2023-08-14 18:30:55   mainnet  \nwbETH-wstETH            2023-08-14 18:30:55   mainnet  \ncbETH-bb-a-WETH-BPT     2023-08-14 18:30:55   mainnet  \nRDNT-WETH               2023-08-14 18:30:55  arbitrum  \nB-wstETH-WETH-Stable    2023-08-14 18:30:55  arbitrum  \nbb-a-USD                2023-08-14 18:30:55  arbitrum  \nrETH-bb-a-WETH-BPT      2023-08-14 18:30:55  arbitrum  \nbbaUSDC/bbaUSDCe        2023-08-14 18:30:55  arbitrum  \nwstETH/rETH/cbETH       2023-08-14 18:30:55  arbitrum  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>wstETH-rETH-sfrxETH-BPT</th>\n      <td>26878.230379</td>\n      <td>5296.981956</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-rETH-STABLE</th>\n      <td>26019.234558</td>\n      <td>15720.118922</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50STG-50bbaUSD</th>\n      <td>16308.632655</td>\n      <td>22025.781467</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>14191.985981</td>\n      <td>3584.245398</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50BADGER</th>\n      <td>12623.634016</td>\n      <td>2620.446127</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>swETH-bb-a-WETH-BPT</th>\n      <td>6343.584184</td>\n      <td>40.883159</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>ankrETH/wstETH</th>\n      <td>6199.462552</td>\n      <td>1299.693253</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-staFiETH-WETH-Stable</th>\n      <td>3135.484927</td>\n      <td>1312.466431</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>GHO/bb-a-USD</th>\n      <td>3117.088776</td>\n      <td>4450.192065</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50RPL</th>\n      <td>2860.233035</td>\n      <td>3993.251328</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50ACX</th>\n      <td>2068.686617</td>\n      <td>1843.788977</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>20WETH-80ALCX</th>\n      <td>1978.718360</td>\n      <td>3475.158464</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50LDO</th>\n      <td>1199.377443</td>\n      <td>177.147674</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wbETH-wstETH</th>\n      <td>348.404449</td>\n      <td>0.203894</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>cbETH-bb-a-WETH-BPT</th>\n      <td>0.045390</td>\n      <td>0.000019</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>11329.786288</td>\n      <td>18710.162660</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>4811.523704</td>\n      <td>63.926965</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3166.295830</td>\n      <td>864.700164</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1082.792500</td>\n      <td>317.284404</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>170.757962</td>\n      <td>204.723590</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>82.043660</td>\n      <td>67.858882</td>\n      <td>2023-07-31 23:57:32</td>\n      <td>2023-08-14 18:30:55</td>\n      <td>arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             pool_fee      swap_fee           time_from  \\\nwstETH-rETH-sfrxETH-BPT  26410.248934   4327.676627 2023-08-01 21:07:40   \nB-rETH-STABLE            26014.373503  16093.465406 2023-08-01 21:07:40   \n50rETH-50BADGER          17810.873413   8716.415835 2023-08-01 21:07:40   \n50STG-50bbaUSD           16308.632655  22670.573332 2023-08-01 21:07:40   \nwstETH-bb-a-WETH-BPT     13943.628428   3831.033486 2023-08-01 21:07:40   \nswETH-bb-a-WETH-BPT       6744.678423     40.359655 2023-08-01 21:07:40   \nankrETH/wstETH            5625.106303   1168.930995 2023-08-01 21:07:40   \nB-staFiETH-WETH-Stable    3214.758069   1327.941456 2023-08-01 21:07:40   \nGHO/bb-a-USD              3184.146739   4459.101975 2023-08-01 21:07:40   \n50rETH-50RPL              2860.233035   3893.887789 2023-08-01 21:07:40   \n50wstETH-50ACX            2068.686617   1894.826707 2023-08-01 21:07:40   \n20WETH-80ALCX             1374.538206   3255.190529 2023-08-01 21:07:40   \n50wstETH-50LDO             437.684728    152.875209 2023-08-01 21:07:40   \nwbETH-wstETH               348.404449      0.104585 2023-08-01 21:07:40   \ncbETH-bb-a-WETH-BPT          0.068601      0.000040 2023-08-01 21:07:40   \nRDNT-WETH                10840.214291  17891.958517 2023-08-01 21:07:40   \nB-wstETH-WETH-Stable      5138.933311     66.186001 2023-08-01 21:07:40   \nbb-a-USD                  3313.390570    757.297998 2023-08-01 21:07:40   \nrETH-bb-a-WETH-BPT        1109.330221    322.313102 2023-08-01 21:07:40   \nbbaUSDC/bbaUSDCe           207.547795    252.228445 2023-08-01 21:07:40   \nwstETH/rETH/cbETH          105.949851     76.837656 2023-08-01 21:07:40   \n\n                                    time_to     chain  \nwstETH-rETH-sfrxETH-BPT 2023-08-15 16:20:45   mainnet  \nB-rETH-STABLE           2023-08-15 16:20:45   mainnet  \n50rETH-50BADGER         2023-08-15 16:20:45   mainnet  \n50STG-50bbaUSD          2023-08-15 16:20:45   mainnet  \nwstETH-bb-a-WETH-BPT    2023-08-15 16:20:45   mainnet  \nswETH-bb-a-WETH-BPT     2023-08-15 16:20:45   mainnet  \nankrETH/wstETH          2023-08-15 16:20:45   mainnet  \nB-staFiETH-WETH-Stable  2023-08-15 16:20:45   mainnet  \nGHO/bb-a-USD            2023-08-15 16:20:45   mainnet  \n50rETH-50RPL            2023-08-15 16:20:45   mainnet  \n50wstETH-50ACX          2023-08-15 16:20:45   mainnet  \n20WETH-80ALCX           2023-08-15 16:20:45   mainnet  \n50wstETH-50LDO          2023-08-15 16:20:45   mainnet  \nwbETH-wstETH            2023-08-15 16:20:45   mainnet  \ncbETH-bb-a-WETH-BPT     2023-08-15 16:20:45   mainnet  \nRDNT-WETH               2023-08-15 16:20:45  arbitrum  \nB-wstETH-WETH-Stable    2023-08-15 16:20:45  arbitrum  \nbb-a-USD                2023-08-15 16:20:45  arbitrum  \nrETH-bb-a-WETH-BPT      2023-08-15 16:20:45  arbitrum  \nbbaUSDC/bbaUSDCe        2023-08-15 16:20:45  arbitrum  \nwstETH/rETH/cbETH       2023-08-15 16:20:45  arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>wstETH-rETH-sfrxETH-BPT</th>\n      <td>26410.248934</td>\n      <td>4327.676627</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-rETH-STABLE</th>\n      <td>26014.373503</td>\n      <td>16093.465406</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50BADGER</th>\n      <td>17810.873413</td>\n      <td>8716.415835</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50STG-50bbaUSD</th>\n      <td>16308.632655</td>\n      <td>22670.573332</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>13943.628428</td>\n      <td>3831.033486</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>swETH-bb-a-WETH-BPT</th>\n      <td>6744.678423</td>\n      <td>40.359655</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>ankrETH/wstETH</th>\n      <td>5625.106303</td>\n      <td>1168.930995</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-staFiETH-WETH-Stable</th>\n      <td>3214.758069</td>\n      <td>1327.941456</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>GHO/bb-a-USD</th>\n      <td>3184.146739</td>\n      <td>4459.101975</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50RPL</th>\n      <td>2860.233035</td>\n      <td>3893.887789</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50ACX</th>\n      <td>2068.686617</td>\n      <td>1894.826707</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>20WETH-80ALCX</th>\n      <td>1374.538206</td>\n      <td>3255.190529</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50LDO</th>\n      <td>437.684728</td>\n      <td>152.875209</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wbETH-wstETH</th>\n      <td>348.404449</td>\n      <td>0.104585</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>cbETH-bb-a-WETH-BPT</th>\n      <td>0.068601</td>\n      <td>0.000040</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>10840.214291</td>\n      <td>17891.958517</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>5138.933311</td>\n      <td>66.186001</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3313.390570</td>\n      <td>757.297998</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1109.330221</td>\n      <td>322.313102</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>207.547795</td>\n      <td>252.228445</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>105.949851</td>\n      <td>76.837656</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,8 +254,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T15:36:33.959626Z",
-     "start_time": "2023-08-14T15:36:33.957664Z"
+     "end_time": "2023-08-15T13:27:00.154218Z",
+     "start_time": "2023-08-15T13:26:59.207893Z"
     }
    },
    "id": "e79b2f6a4ead2cad"
