feat: include bpt tokens into fees report

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Define constants for Arbitrum:\n",
@@ -54,15 +54,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T13:25:02.283870Z",
-     "start_time": "2023-08-15T13:25:02.267171Z"
+     "end_time": "2023-08-16T13:38:20.437201Z",
+     "start_time": "2023-08-16T13:38:20.418749Z"
     }
    },
    "id": "39d87004addaae1b"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -98,8 +98,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T13:25:02.292751Z",
-     "start_time": "2023-08-15T13:25:02.273542Z"
+     "end_time": "2023-08-16T13:38:20.438364Z",
+     "start_time": "2023-08-16T13:38:20.422614Z"
     }
    },
    "id": "abc722b4fa453b5a"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import os\n",
@@ -188,8 +188,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T13:26:59.202347Z",
-     "start_time": "2023-08-15T13:25:02.284574Z"
+     "end_time": "2023-08-16T13:39:00.535229Z",
+     "start_time": "2023-08-16T13:38:20.428948Z"
     }
    },
    "id": "e1e0b8b90f62234c"
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             pool_fee      swap_fee           time_from  \\\nwstETH-rETH-sfrxETH-BPT  26410.248934   4327.676627 2023-08-01 21:07:40   \nB-rETH-STABLE            26014.373503  16093.465406 2023-08-01 21:07:40   \n50rETH-50BADGER          17810.873413   8716.415835 2023-08-01 21:07:40   \n50STG-50bbaUSD           16308.632655  22670.573332 2023-08-01 21:07:40   \nwstETH-bb-a-WETH-BPT     13943.628428   3831.033486 2023-08-01 21:07:40   \nswETH-bb-a-WETH-BPT       6744.678423     40.359655 2023-08-01 21:07:40   \nankrETH/wstETH            5625.106303   1168.930995 2023-08-01 21:07:40   \nB-staFiETH-WETH-Stable    3214.758069   1327.941456 2023-08-01 21:07:40   \nGHO/bb-a-USD              3184.146739   4459.101975 2023-08-01 21:07:40   \n50rETH-50RPL              2860.233035   3893.887789 2023-08-01 21:07:40   \n50wstETH-50ACX            2068.686617   1894.826707 2023-08-01 21:07:40   \n20WETH-80ALCX             1374.538206   3255.190529 2023-08-01 21:07:40   \n50wstETH-50LDO             437.684728    152.875209 2023-08-01 21:07:40   \nwbETH-wstETH               348.404449      0.104585 2023-08-01 21:07:40   \ncbETH-bb-a-WETH-BPT          0.068601      0.000040 2023-08-01 21:07:40   \nRDNT-WETH                10840.214291  17891.958517 2023-08-01 21:07:40   \nB-wstETH-WETH-Stable      5138.933311     66.186001 2023-08-01 21:07:40   \nbb-a-USD                  3313.390570    757.297998 2023-08-01 21:07:40   \nrETH-bb-a-WETH-BPT        1109.330221    322.313102 2023-08-01 21:07:40   \nbbaUSDC/bbaUSDCe           207.547795    252.228445 2023-08-01 21:07:40   \nwstETH/rETH/cbETH          105.949851     76.837656 2023-08-01 21:07:40   \n\n                                    time_to     chain  \nwstETH-rETH-sfrxETH-BPT 2023-08-15 16:20:45   mainnet  \nB-rETH-STABLE           2023-08-15 16:20:45   mainnet  \n50rETH-50BADGER         2023-08-15 16:20:45   mainnet  \n50STG-50bbaUSD          2023-08-15 16:20:45   mainnet  \nwstETH-bb-a-WETH-BPT    2023-08-15 16:20:45   mainnet  \nswETH-bb-a-WETH-BPT     2023-08-15 16:20:45   mainnet  \nankrETH/wstETH          2023-08-15 16:20:45   mainnet  \nB-staFiETH-WETH-Stable  2023-08-15 16:20:45   mainnet  \nGHO/bb-a-USD            2023-08-15 16:20:45   mainnet  \n50rETH-50RPL            2023-08-15 16:20:45   mainnet  \n50wstETH-50ACX          2023-08-15 16:20:45   mainnet  \n20WETH-80ALCX           2023-08-15 16:20:45   mainnet  \n50wstETH-50LDO          2023-08-15 16:20:45   mainnet  \nwbETH-wstETH            2023-08-15 16:20:45   mainnet  \ncbETH-bb-a-WETH-BPT     2023-08-15 16:20:45   mainnet  \nRDNT-WETH               2023-08-15 16:20:45  arbitrum  \nB-wstETH-WETH-Stable    2023-08-15 16:20:45  arbitrum  \nbb-a-USD                2023-08-15 16:20:45  arbitrum  \nrETH-bb-a-WETH-BPT      2023-08-15 16:20:45  arbitrum  \nbbaUSDC/bbaUSDCe        2023-08-15 16:20:45  arbitrum  \nwstETH/rETH/cbETH       2023-08-15 16:20:45  arbitrum  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>wstETH-rETH-sfrxETH-BPT</th>\n      <td>26410.248934</td>\n      <td>4327.676627</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-rETH-STABLE</th>\n      <td>26014.373503</td>\n      <td>16093.465406</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50BADGER</th>\n      <td>17810.873413</td>\n      <td>8716.415835</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50STG-50bbaUSD</th>\n      <td>16308.632655</td>\n      <td>22670.573332</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>13943.628428</td>\n      <td>3831.033486</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>swETH-bb-a-WETH-BPT</th>\n      <td>6744.678423</td>\n      <td>40.359655</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>ankrETH/wstETH</th>\n      <td>5625.106303</td>\n      <td>1168.930995</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-staFiETH-WETH-Stable</th>\n      <td>3214.758069</td>\n      <td>1327.941456</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>GHO/bb-a-USD</th>\n      <td>3184.146739</td>\n      <td>4459.101975</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50RPL</th>\n      <td>2860.233035</td>\n      <td>3893.887789</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50ACX</th>\n      <td>2068.686617</td>\n      <td>1894.826707</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>20WETH-80ALCX</th>\n      <td>1374.538206</td>\n      <td>3255.190529</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50LDO</th>\n      <td>437.684728</td>\n      <td>152.875209</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wbETH-wstETH</th>\n      <td>348.404449</td>\n      <td>0.104585</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>cbETH-bb-a-WETH-BPT</th>\n      <td>0.068601</td>\n      <td>0.000040</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>10840.214291</td>\n      <td>17891.958517</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>5138.933311</td>\n      <td>66.186001</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3313.390570</td>\n      <td>757.297998</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1109.330221</td>\n      <td>322.313102</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>207.547795</td>\n      <td>252.228445</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>105.949851</td>\n      <td>76.837656</td>\n      <td>2023-08-01 21:07:40</td>\n      <td>2023-08-15 16:20:45</td>\n      <td>arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                         pool_fee  swap_fee  bpt_token_fee  \\\nwstETH-rETH-sfrxETH-BPT  27491.32   4293.62          14.74   \nB-rETH-STABLE            25985.83  16366.29           0.00   \n50rETH-50BADGER          17810.87  10529.54         261.64   \n50STG-50bbaUSD           16308.63  23723.88       20756.67   \nwstETH-bb-a-WETH-BPT     15475.30   4690.28           8.31   \nswETH-bb-a-WETH-BPT       7651.86     34.81           4.11   \nankrETH/wstETH            6248.11    984.55           3.36   \nB-staFiETH-WETH-Stable    3280.31   1164.77           0.00   \nGHO/bb-a-USD              3147.67   4596.68        3181.08   \n50rETH-50RPL              2860.23   3425.67          11.93   \n50wstETH-50ACX            2068.69   1551.36         170.35   \n20WETH-80ALCX             1249.84   3385.13          42.11   \n50wstETH-50LDO             517.85    164.93           8.27   \nwbETH-wstETH               206.41      0.10           0.11   \ncbETH-bb-a-WETH-BPT          0.14      0.01           0.00   \nRDNT-WETH                14684.52  25490.05       10532.55   \nB-wstETH-WETH-Stable      5068.09     60.12           0.00   \nbb-a-USD                  3277.65    707.07        3274.60   \nrETH-bb-a-WETH-BPT        1169.42    336.57           0.61   \nbbaUSDC/bbaUSDCe           246.09    286.17         245.84   \nwstETH/rETH/cbETH          105.95     77.85           0.00   \n\n                                  time_from             time_to     chain  \nwstETH-rETH-sfrxETH-BPT 2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nB-rETH-STABLE           2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \n50rETH-50BADGER         2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \n50STG-50bbaUSD          2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nwstETH-bb-a-WETH-BPT    2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nswETH-bb-a-WETH-BPT     2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nankrETH/wstETH          2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nB-staFiETH-WETH-Stable  2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nGHO/bb-a-USD            2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \n50rETH-50RPL            2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \n50wstETH-50ACX          2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \n20WETH-80ALCX           2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \n50wstETH-50LDO          2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nwbETH-wstETH            2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \ncbETH-bb-a-WETH-BPT     2023-08-02 20:26:18 2023-08-16 16:34:06   mainnet  \nRDNT-WETH               2023-08-02 20:26:18 2023-08-16 16:34:06  arbitrum  \nB-wstETH-WETH-Stable    2023-08-02 20:26:18 2023-08-16 16:34:06  arbitrum  \nbb-a-USD                2023-08-02 20:26:18 2023-08-16 16:34:06  arbitrum  \nrETH-bb-a-WETH-BPT      2023-08-02 20:26:18 2023-08-16 16:34:06  arbitrum  \nbbaUSDC/bbaUSDCe        2023-08-02 20:26:18 2023-08-16 16:34:06  arbitrum  \nwstETH/rETH/cbETH       2023-08-02 20:26:18 2023-08-16 16:34:06  arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>bpt_token_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>wstETH-rETH-sfrxETH-BPT</th>\n      <td>27491.32</td>\n      <td>4293.62</td>\n      <td>14.74</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-rETH-STABLE</th>\n      <td>25985.83</td>\n      <td>16366.29</td>\n      <td>0.00</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50BADGER</th>\n      <td>17810.87</td>\n      <td>10529.54</td>\n      <td>261.64</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50STG-50bbaUSD</th>\n      <td>16308.63</td>\n      <td>23723.88</td>\n      <td>20756.67</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>15475.30</td>\n      <td>4690.28</td>\n      <td>8.31</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>swETH-bb-a-WETH-BPT</th>\n      <td>7651.86</td>\n      <td>34.81</td>\n      <td>4.11</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>ankrETH/wstETH</th>\n      <td>6248.11</td>\n      <td>984.55</td>\n      <td>3.36</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>B-staFiETH-WETH-Stable</th>\n      <td>3280.31</td>\n      <td>1164.77</td>\n      <td>0.00</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>GHO/bb-a-USD</th>\n      <td>3147.67</td>\n      <td>4596.68</td>\n      <td>3181.08</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50rETH-50RPL</th>\n      <td>2860.23</td>\n      <td>3425.67</td>\n      <td>11.93</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50ACX</th>\n      <td>2068.69</td>\n      <td>1551.36</td>\n      <td>170.35</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>20WETH-80ALCX</th>\n      <td>1249.84</td>\n      <td>3385.13</td>\n      <td>42.11</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50LDO</th>\n      <td>517.85</td>\n      <td>164.93</td>\n      <td>8.27</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>wbETH-wstETH</th>\n      <td>206.41</td>\n      <td>0.10</td>\n      <td>0.11</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>cbETH-bb-a-WETH-BPT</th>\n      <td>0.14</td>\n      <td>0.01</td>\n      <td>0.00</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>14684.52</td>\n      <td>25490.05</td>\n      <td>10532.55</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>5068.09</td>\n      <td>60.12</td>\n      <td>0.00</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3277.65</td>\n      <td>707.07</td>\n      <td>3274.60</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1169.42</td>\n      <td>336.57</td>\n      <td>0.61</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>246.09</td>\n      <td>286.17</td>\n      <td>245.84</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>105.95</td>\n      <td>77.85</td>\n      <td>0.00</td>\n      <td>2023-08-02 20:26:18</td>\n      <td>2023-08-16 16:34:06</td>\n      <td>arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,8 +236,16 @@
     "        # Calculate fees\n",
     "        pool_fee = float(pool_snapshot_now['protocolFee']) - float(pool_snapshot_2_weeks_ago['protocolFee'])\n",
     "        pool_swap_fee = float(pool_snapshot_now['swapFees']) - float(pool_snapshot_2_weeks_ago['swapFees'])\n",
+    "        # Now we need to collect token fee info. Let's start with BPT tokens, which is Balancer pool token. Notice,\n",
+    "        # That totalProtocolFeePaidInBPT can be null, so we need to check for that\n",
+    "        bpt_token_fee = 0\n",
+    "        if pool_snapshot_now['pool']['totalProtocolFeePaidInBPT'] is not None and pool_snapshot_2_weeks_ago['pool']['totalProtocolFeePaidInBPT'] is not None:\n",
+    "            bpt_token_fee = float(pool_snapshot_now['pool']['totalProtocolFeePaidInBPT']) - float(pool_snapshot_2_weeks_ago['pool']['totalProtocolFeePaidInBPT'])\n",
     "        fees[pool_snapshot_now['pool']['symbol']] = {\n",
-    "            'pool_fee': pool_fee, 'swap_fee': pool_swap_fee, 'time_from': arb_datetime_2_weeks_ago,\n",
+    "            'pool_fee': round(pool_fee, 2), \n",
+    "            'swap_fee': round(pool_swap_fee, 2),\n",
+    "            'bpt_token_fee': round(bpt_token_fee, 2),\n",
+    "            'time_from': arb_datetime_2_weeks_ago,\n",
     "            'time_to': arb_datetime_now,\n",
     "            'chain': chain,\n",
     "        }\n",
@@ -254,8 +262,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T13:27:00.154218Z",
-     "start_time": "2023-08-15T13:26:59.207893Z"
+     "end_time": "2023-08-16T13:39:59.387463Z",
+     "start_time": "2023-08-16T13:39:59.359534Z"
     }
    },
    "id": "e79b2f6a4ead2cad"
